# agent-skills

./: README.md  SKILL.md
assets/project-template/: .env.example  .gitignore  session.md
assets/project-template/app/: config.py  database.py
assets/snippets/: alembic_env.py
fastapi-mysql-alembic/assets/project-template/: pyproject.toml
fastapi-mysql-alembic/assets/project-template/app/: main.py
fastapi-mysql-alembic/assets/snippets/: crud_base.py  modelo_base.py  router_base.py  test_example.py
fastapi-mysql-alembic/references/: errores-comunes.md  estructura.md  patrones.md
resumable-session/: SKILL.md
