[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "API REST con FastAPI, MySQL y Alembic"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[tool.uv]
# Configuración específica de uv
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[tool.uv.pip]
# Usar índice de PyPI por defecto
index-url = "https://pypi.org/simple"
